tolk-tester/tests/invalid-syntax/err-3824.tolk
import "@mylib/"

/**
@path_mapping @mylib=/some/path
@compilation_should_fail
@stderr import path with @ prefix must specify a file
 */
